feat/robots e SEO

--- a/index.html
+++ b/index.html
@@ -1,19 +1,54 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="keywords"
+      content="Calcário, cal, colheita, fortaleza, Cal agrícola,
+  Cal virgem,
+  Cal hidratada,
+  Calcário agrícola,
+  Calcário dolomítico,
+  Fornecedores,
+  Fornecedores de cal,
+  Distribuidor de calcário,
+  Serviços de transporte agrícola,
+  Transporte de insumos agrícolas,
+  Transporte de cal e calcário,
+  Logística agrícola,
+  Entrega de insumos para agricultura,
+  Distribuição de cal e calcário,
+  Compra de cal e calcário,
+  Venda de cal e calcário,
+  Melhoria do solo,
+  Nutrição do solo,
+  pH do solo,
+  Neutralização do solo,
+  Agricultura sustentável"
+    />
+    <meta
+      name="description"
+      content="Descubra nossa linha completa de produtos agrícolas, incluindo cal virgem e hidratada, calcário dolomítico, além de serviços de transporte especializados para entrega rápida e eficiente de insumos agrícolas. Melhore a qualidade do solo e aumente o rendimento das suas culturas com nossas soluções confiáveis e sustentáveis."
+    />
+    <meta name="author" content="Seu Nome" />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/assets/logo-1_transparent.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Caeira Canta Galo</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap" />
-</head>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/assets/logo-1_transparent.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Caeira Canta Galo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
+    />
+  </head>
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
