alteração de banners

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta
       name="keywords"
       content="Calcário, cal, colheita, fortaleza, Cal agrícola,
+  caeira canta galo
   Cal virgem,
   Cal hidratada,
   Calcário agrícola,
